// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiButtonEmpty is rendered 1`] = `
<button
  aria-label="aria-label"
  class="euiButtonEmpty testClass1 testClass2 css-14wjao6-empty-primary"
  data-test-subj="test subject string"
  type="button"
>
  <span
    class="euiButtonContent euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiButtonEmpty props color accent is rendered 1`] = `
<button
  class="euiButtonEmpty css-1gezeiz-empty-accent"
  type="button"
>
  <span
    class="euiButtonContent euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props color danger is rendered 1`] = `
<button
  class="euiButtonEmpty css-hdemv5-empty-danger"
  type="button"
>
  <span
    class="euiButtonContent euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props color ghost is rendered 1`] = `
<button
  class="euiButtonEmpty css-15qfgye-empty-text"
  type="button"
>
  <span
    class="euiButtonContent euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props color primary is rendered 1`] = `
<button
  class="euiButtonEmpty css-14wjao6-empty-primary"
  type="button"
>
  <span
    class="euiButtonContent euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props color success is rendered 1`] = `
<button
  class="euiButtonEmpty css-1g26lvl-empty-success"
  type="button"
>
  <span
    class="euiButtonContent euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props color text is rendered 1`] = `
<button
  class="euiButtonEmpty css-15qfgye-empty-text"
  type="button"
>
  <span
    class="euiButtonContent euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props color warning is rendered 1`] = `
<button
  class="euiButtonEmpty css-1rn90h2-empty-warning"
  type="button"
>
  <span
    class="euiButtonContent euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props contentProps is rendered 1`] = `
<button
  class="euiButtonEmpty css-14wjao6-empty-primary"
  type="button"
>
  <span
    aria-label="aria-label"
    class="euiButtonContent euiButtonEmpty__content testClass1 testClass2"
    data-test-subj="test subject string"
  >
    <span
      class="euiButtonEmpty__text"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiButtonEmpty props flush both is rendered 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--flushBoth css-14wjao6-empty-primary"
  type="button"
>
  <span
    class="euiButtonContent euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props flush left is rendered 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--flushLeft css-14wjao6-empty-primary"
  type="button"
>
  <span
    class="euiButtonContent euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props flush right is rendered 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--flushRight css-14wjao6-empty-primary"
  type="button"
>
  <span
    class="euiButtonContent euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props href secures the rel attribute when the target is _blank 1`] = `
<a
  class="euiButtonEmpty css-14wjao6-empty-primary"
  href="#"
  rel="noopener noreferrer"
  target="_blank"
>
  <span
    class="euiButtonContent euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    />
  </span>
</a>
`;

exports[`EuiButtonEmpty props iconSide left is rendered 1`] = `
<button
  class="euiButtonEmpty css-14wjao6-empty-primary"
  type="button"
>
  <span
    class="euiButtonContent euiButtonEmpty__content"
  >
    <span
      class="euiButtonContent__icon"
      color="inherit"
      data-euiicon-type="user"
    />
    <span
      class="euiButtonEmpty__text"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiButtonEmpty props iconSide right is rendered 1`] = `
<button
  class="euiButtonEmpty css-14wjao6-empty-primary"
  type="button"
>
  <span
    class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
  >
    <span
      class="euiButtonContent__icon"
      color="inherit"
      data-euiicon-type="user"
    />
    <span
      class="euiButtonEmpty__text"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiButtonEmpty props iconType is rendered 1`] = `
<button
  class="euiButtonEmpty css-14wjao6-empty-primary"
  type="button"
>
  <span
    class="euiButtonContent euiButtonEmpty__content"
  >
    <span
      class="euiButtonContent__icon"
      color="inherit"
      data-euiicon-type="user"
    />
    <span
      class="euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props isDisabled is rendered 1`] = `
<button
  class="euiButtonEmpty css-13li5q5-empty-disabled"
  disabled=""
  type="button"
>
  <span
    class="euiButtonContent euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props isDisabled renders a button even when href is defined 1`] = `
<button
  class="euiButtonEmpty css-13li5q5-empty-disabled"
  disabled=""
  type="button"
>
  <span
    class="euiButtonContent euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props isDisabled renders if passed simply as disabled 1`] = `
<button
  class="euiButtonEmpty css-13li5q5-empty-disabled"
  disabled=""
  type="button"
>
  <span
    class="euiButtonContent euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props isLoading is rendered 1`] = `
<button
  class="euiButtonEmpty css-13li5q5-empty-disabled"
  disabled=""
  type="button"
>
  <span
    class="euiButtonContent euiButtonEmpty__content"
  >
    <span
      aria-label="Loading"
      class="euiLoadingSpinner euiButtonContent__spinner emotion-euiLoadingSpinner-m"
      role="progressbar"
    />
    <span
      class="euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props isSelected is rendered as false 1`] = `
<button
  aria-pressed="false"
  class="euiButtonEmpty css-14wjao6-empty-primary"
  type="button"
>
  <span
    class="euiButtonContent euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props isSelected is rendered as true 1`] = `
<button
  aria-pressed="true"
  class="euiButtonEmpty css-14wjao6-empty-primary"
  type="button"
>
  <span
    class="euiButtonContent euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props size m is rendered 1`] = `
<button
  class="euiButtonEmpty css-14wjao6-empty-primary"
  type="button"
>
  <span
    class="euiButtonContent euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props size s is rendered 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--small css-14wjao6-empty-primary"
  type="button"
>
  <span
    class="euiButtonContent euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props size xs is rendered 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--xSmall css-14wjao6-empty-primary"
  type="button"
>
  <span
    class="euiButtonContent euiButtonEmpty__content"
  >
    <span
      class="euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props textProps is rendered 1`] = `
<button
  class="euiButtonEmpty css-14wjao6-empty-primary"
  type="button"
>
  <span
    class="euiButtonContent euiButtonEmpty__content"
  >
    <span
      aria-label="aria-label"
      class="euiButtonEmpty__text testClass1 testClass2"
      data-test-subj="test subject string"
    >
      Content
    </span>
  </span>
</button>
`;
